--- a/Hotel/BookingService/Adapters/IoC/Infrastructure/IoC.csproj
+++ b/Hotel/BookingService/Adapters/IoC/Infrastructure/IoC.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\PaymentService\Core\Application\Application\Payment.Application.csproj" />
     <ProjectReference Include="..\..\..\Core\Application\Application.csproj" />
     <ProjectReference Include="..\..\Data\Data.csproj" />
   </ItemGroup>
